kubernetes/apps/test/xen/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: xen
subsets:
  - addresses:
      - ip: 192.168.10.51
    ports:
      - port: 8443
