kubernetes/apps/test/xen/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: xen
  namespace: xen
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`xen.${DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: xen
          port: 8443
  tls:
    secretName: xen.${DOMAIN}
