kubernetes/apps/test/xen/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: xen
  namespace: xen
spec:
  ports:
    - port: 8443
      targetPort: http
      protocol: TCP
